--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@ in vec2 v_texCoord;
 out vec4 outColor;
 
 void main() {
-  outColor = texture(u_image, v_texCoord);
+  // outColor = texture(u_image, v_texCoord);
+  outColor = texture(u_image, v_texCoord).bgra;
 }
 `;
 
