--- a/index.html
+++ b/index.html
@@ -71,7 +71,14 @@ out vec4 outColor;
 
 void main() {
   // outColor = texture(u_image, v_texCoord);
-  outColor = texture(u_image, v_texCoord).bgra;
+  // outColor = texture(u_image, v_texCoord).bgra;
+  vec2 onePixel = vec2(1) / vec2(textureSize(u_image, 0));
+ 
+  // average the left, middle, and right pixels.
+  outColor = (
+      texture(u_image, v_texCoord) +
+      texture(u_image, v_texCoord + vec2( onePixel.x, 0.0)) +
+      texture(u_image, v_texCoord + vec2(-onePixel.x, 0.0))) / 3.0;
 }
 `;
 
